load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "noaa",
    srcs = ["station.go"],
    importpath = "github.com/rmrobinson/nerves/services/weather/noaa",
    visibility = ["//visibility:public"],
    deps = [
        "//services/weather",
        "@org_uber_go_zap//:zap",
    ],
)
