load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/cmd/buildingd",
    visibility = ["//visibility:private"],
    deps = [
        "//services/domotics:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "buildingd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
