load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "hue.go",
        "main.go",
        "monopamp.go",
        "proxy.go",
    ],
    importpath = "github.com/rmrobinson/nerves/services/domotics/cmd/deviced",
    visibility = ["//visibility:private"],
    deps = [
        "//services/domotics:go_default_library",
        "//services/domotics/bridge:go_default_library",
        "//vendor/github.com/rmrobinson/hue-go:go_default_library",
        "//vendor/github.com/rmrobinson/monoprice-amp-go:go_default_library",
        "//vendor/github.com/tarm/serial:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "deviced",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
