load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/cmd/huecli",
    visibility = ["//visibility:private"],
    deps = [
        "//services/domotics/bridge:go_default_library",
        "//vendor/github.com/rmrobinson/hue-go:go_default_library",
    ],
)

go_binary(
    name = "huecli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
