load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "googlehome_proto",
    srcs = ["googlehome.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "googlehome",
    embed = [":googlehome_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/integrations/googlehome",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "googlehome_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/integrations/googlehome",
    proto = ":googlehome_proto",
    visibility = ["//visibility:public"],
)
